doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game
-source
11
-classpath
C:\Program Files\Greenfoot\lib\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-api-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-migrationsupport-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-jupiter-params-5.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-commons-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-console-standalone-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-engine-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-launcher-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-reporting-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-runner-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-suite-api-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-platform-testkit-1.5.2.jar;C:\Program Files\Greenfoot\lib\junit-quickcheck-core-0.9.jar;C:\Program Files\Greenfoot\lib\junit-vintage-engine-5.5.2.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.8.90.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.3.7.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.8.jar;C:\Program Files\Greenfoot\lib\wellbehavedfx-0.3.3.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game
-d
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Gr11Game
-windowtitle
Gr11Game
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/Player.java
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/Warrior.java
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/SimpleTimer.java
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/Mage.java
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/Enemy.java
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/SuperStatBar.java
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game/MyWorld.java
<---- end of javadoc command ---->
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Player.java...
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Player.java:70: error: modifier public not allowed here
    public void takeDamage(int damageRecieved)
           ^
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Player.java:70: error: ',', ')', or '[' expected
    public void takeDamage(int damageRecieved)
                          ^
C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Player.java:70: error: ';' expected
    public void takeDamage(int damageRecieved)
                                             ^
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Warrior.java...
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\SimpleTimer.java...
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Mage.java...
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\Enemy.java...
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\SuperStatBar.java...
Loading source file C:\Users\dtan8\OneDrive\Documents\GitHub\Gr11Game\MyWorld.java...
3 errors
